update swager.json add  bearer token request
