# backend/routes/postsRouter.js
@@ -6,7 +6,7 @@ const postValidation = require('../middleware/postValidation');
 const postsRouter = Router();
 
 postsRouter.post('/', authJWT, postValidation.dataValidation, postController.addPost);
-postsRouter.get('/', postController.getAllPost);
+postsRouter.get('/', authJWT, postController.getAllPost);
 postsRouter.delete('/:id', authJWT, postController.deletePost);
 postsRouter.put('/:id', authJWT, postValidation.dataValidation, postController.editPost);
 
